<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_book_ticket">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_movie"
            android:drawablePadding="@dimen/card_margin"
            android:drawableRight="@drawable/ic_movie"
            android:gravity="center"
            android:padding="@dimen/backdrop_subtitle"
            android:text="@string/screen"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"
            android:text="@string/row_a"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="@dimen/card_margin"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"
            android:text="@string/row_b"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="@dimen/card_margin"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"
            android:text="@string/row_c"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="@dimen/card_margin"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"
            android:text="@string/row_d"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="@dimen/card_margin"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"
            android:text="@string/row_e"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="@dimen/card_margin"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"
            android:text="@string/row_f"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="@dimen/card_margin"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/card_margin"
            android:drawableLeft="@drawable/ic_person_book"
            android:gravity="center_vertical"
            android:text="@string/book"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/card_margin"
            android:drawableLeft="@drawable/ic_person_non_book"
            android:gravity="center_vertical"
            android:text="@string/non_book"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:drawableLeft="@drawable/ic_person_select"
            android:gravity="center_vertical"
            android:text="@string/selected"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
